@@ -1,3 +1,7 @@
+2008-11-11  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c (dfsch_apply_impl): Application of nil leads to error
+
 2008-11-03  Ales Hakl  <ales at hakl dot net>
 
 	* src/number.c (dfsch_number_mod_inv): modular multiplicative inverse
